--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 group 'edu.puc.core'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -19,12 +19,12 @@ generateGrammarSource {
 
 dependencies {
     antlr 'org.antlr:antlr4:4.7'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-    implementation "org.openjfx:javafx-base:12:linux"
-    implementation group: 'org.json', name: 'json', version: '20190722'
-    implementation group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
-    implementation group: 'javax.mail', name: 'mail', version: '1.4.1'
-    implementation "commons-validator:commons-validator:1.6"
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "org.openjfx:javafx-base:12:linux"
+    compile group: 'org.json', name: 'json', version: '20190722'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+    compile group: 'javax.mail', name: 'mail', version: '1.4.1'
+    compile "commons-validator:commons-validator:1.6"
 }
 
 task fatJar(type: Jar) {
