Changed deprecated names to current names in build.gradle and added duplicatesStrategy to allow the latest gradle version to work with the project

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 }
 
 task fatJar(type: Jar) {
-    baseName = 'CORE-FAT'
+    archiveBaseName = 'CORE-FAT'
     from {
-        configurations.compile.collect {
+        configurations.runtimeClasspath.collect {
             it.isDirectory() ? it : zipTree(it)
         }
     }
@@ -39,5 +39,6 @@ task fatJar(type: Jar) {
                 'Main-Class': 'edu.puc.core.Main'
         )
     }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     with jar
 }
